# cred_retrieve

./: README.md  pyproject.toml
cred_retrieve/: __init__.py  factory.py  provider.py
cred_retrieve/providers/: dotenv.py  keepassxc.py
